CSS Fixes (lower maximum contrast for chaoswest stage) Started with the first slides

--- a/css/theme/black.css
+++ b/css/theme/black.css
@@ -18,7 +18,7 @@ body {
   font-family: "Source Sans Pro", Helvetica, sans-serif;
   font-size: 42px;
   font-weight: normal;
-  color: #fff; }
+  color: #D0D0D0; }
 
 ::selection {
   color: #fff;
@@ -45,7 +45,7 @@ body {
 .reveal h5,
 .reveal h6 {
   margin: 0 0 20px 0;
-  color: #fff;
+  color: #A0A0A0;
   font-family: "Source Sans Pro", Helvetica, sans-serif;
   font-weight: 600;
   line-height: 1.2;
@@ -209,7 +209,7 @@ body {
  * LINKS
  *********************************************/
 .reveal a {
-  color: #42affa;
+  color: #8b0000;
   text-decoration: none;
   -webkit-transition: color .15s ease;
   -moz-transition: color .15s ease;
@@ -222,7 +222,7 @@ body {
 
 .reveal .roll span:after {
   color: #fff;
-  background: #068de9; }
+  background: #8b0000; }
 
 /*********************************************
  * IMAGES
@@ -251,14 +251,14 @@ body {
  * NAVIGATION CONTROLS
  *********************************************/
 .reveal .controls {
-  color: #42affa; }
+  color: #8b0000; }
 
 /*********************************************
  * PROGRESS BAR
  *********************************************/
 .reveal .progress {
   background: rgba(0, 0, 0, 0.2);
-  color: #42affa; }
+  color: #8b0000; }
 
 .reveal .progress span {
   -webkit-transition: width 800ms cubic-bezier(0.26, 0.86, 0.44, 0.985);
